--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -7,15 +7,15 @@
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
 
-    <section class="bg-gray-50 dark:bg-gray-900">
+    <section>
         <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
             <a href="#" class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white">
-                <img class="h-8 mr-2" src="{{ asset("uploads/logo.png") }}" alt="logo">
+                <img class="h-8 mr-2" src="{{ asset("uploads/diagramme-circulaire.png") }}" alt="logo">
                 Monifus
             </a>
             <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
                 <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
-                    <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
+                    <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-primary-500">
                         Inscrivez-vous sur le site
                     </h1>
                         {{ form_start(registrationForm, {'attr': {'class': 'form-wrapper'}}) }}
