--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -7,3 +7,7 @@
 body {
   font-family: "Nunito Sans", sans-serif;
 }
+
+h1 {
+  @apply text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-primary-500;
+}
