--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -7,71 +7,51 @@
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
 
-    <section>
-        <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
-            <a href="#" class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white">
-                <img class="h-8 mr-2" src="{{ asset("uploads/diagramme-circulaire.png") }}" alt="logo">
-                Monifus
-            </a>
-            <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
-                <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
-                    <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-primary-500">
-                        Inscrivez-vous sur le site
-                    </h1>
-                        {{ form_start(registrationForm, {'attr': {'class': 'form-wrapper'}}) }}
-                            <div>
-                                {{ form_label(registrationForm.email, 'Votre email') }}
-                                {{ form_widget(registrationForm.email) }}
-                            </div>
-                            <div>
-                                {{ form_label(registrationForm.pseudonymeWebsite, 'Pseudo sur le site') }}
-                                {{ form_widget(registrationForm.pseudonymeWebsite) }}
-                            </div>
-                            <div>
-                                {{ form_label(registrationForm.pseudonymeDofus, 'Pseudo en jeu') }}
-                                {{ form_widget(registrationForm.pseudonymeDofus) }}
-                            </div>
-                            <div>
-                                {{ form_label(registrationForm.plainPassword, 'Mot de passe') }}
-                                {{ form_widget(registrationForm.plainPassword) }}
-                            </div>
+    <div class="wrapper">
+        {% include("includes/logo.html.twig") %}
+        <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
+            <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-primary-500">
+                Inscrivez-vous sur le site
+            </h1>
+            {{ form_start(registrationForm, {'attr': {'class': 'form-wrapper'}}) }}
+            <div>
+                {{ form_label(registrationForm.email, 'Votre email') }}
+                {{ form_widget(registrationForm.email) }}
+            </div>
+            <div>
+                {{ form_label(registrationForm.pseudonymeWebsite, 'Pseudo sur le site') }}
+                {{ form_widget(registrationForm.pseudonymeWebsite) }}
+            </div>
+            <div>
+                {{ form_label(registrationForm.pseudonymeDofus, 'Pseudo en jeu') }}
+                {{ form_widget(registrationForm.pseudonymeDofus) }}
+            </div>
+            <div>
+                {{ form_label(registrationForm.plainPassword, 'Mot de passe') }}
+                {{ form_widget(registrationForm.plainPassword) }}
+            </div>
 
-                            <div class="flex items-center justify-between">
-                                <div class="flex items-start">
-                                    <div class="flex items-center h-5">
-                                        {{ form_widget(registrationForm.agreeTerms) }}
-                                    </div>
-                                    <div class="ml-3 text-sm">
-                                        {{ form_label(registrationForm.agreeTerms) }}
-                                        <label for="remember" class="text-gray-500 dark:text-gray-300">J'accepte les conditions générales d'utilisation</label>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div>
-                                {{ form_widget(registrationForm.submit) }}
-                            </div>
-                            <p class="text-sm font-light text-gray-500 dark:text-gray-400">
-                                Déjà inscrit? <a href="#" class="font-medium text-primary-600 hover:underline dark:text-primary-500">Connexion</a>
-                            </p>
-                        {{ form_end(registrationForm) }}
-{#                        <div class="flex items-center justify-between">#}
-{#                            <div class="flex items-start">#}
-{#                                <div class="flex items-center h-5">#}
-{#                                    <input id="remember" aria-describedby="remember" type="checkbox" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800" required="">#}
-{#                                </div>#}
-{#                                <div class="ml-3 text-sm">#}
-{#                                    <label for="remember" class="text-gray-500 dark:text-gray-300">Remember me</label>#}
-{#                                </div>#}
-{#                            </div>#}
-{#                            <a href="#" class="text-sm font-medium text-primary-600 hover:underline dark:text-primary-500">Forgot password?</a>#}
-{#                        </div>#}
-{#                        <button type="submit" class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Sign in</button>#}
-{#                        <p class="text-sm font-light text-gray-500 dark:text-gray-400">#}
-{#                            Don’t have an account yet? <a href="#" class="font-medium text-primary-600 hover:underline dark:text-primary-500">Sign up</a>#}
-{#                        </p>#}
+            <div class="flex items-center justify-between">
+                <div class="flex items-start">
+                    <div class="flex items-center h-5">
+                        {{ form_widget(registrationForm.agreeTerms) }}
+                    </div>
+                    <div class="ml-3 text-sm">
+                        {{ form_label(registrationForm.agreeTerms) }}
+                        <label for="remember" class="text-gray-500 dark:text-gray-300">J'accepte les conditions
+                            générales d'utilisation</label>
+                    </div>
                 </div>
             </div>
+
+            <div>
+                {{ form_widget(registrationForm.submit) }}
+            </div>
+            <p class="text-sm font-light text-gray-500 dark:text-gray-400">
+                Déjà inscrit? <a href="{{ path('app_login') }}"
+                                 class="font-medium text-primary-600 hover:underline dark:text-primary-500">Connexion</a>
+            </p>
+            {{ form_end(registrationForm) }}
         </div>
-    </section>
+    </div>
 {% endblock %}
