:lipstick: add favicon + H1 style

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -6,9 +6,7 @@
     <div class="wrapper">
         {% include("includes/logo.html.twig") %}
         <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
-            <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-primary-500">
-                Connexion à votre compte
-            </h1>
+            <h1>Connexion à votre compte</h1>
             <form class="space-y-4 md:space-y-6" method="post">
                 {% if error %}
                     <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
