--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -10,9 +10,7 @@
     <div class="wrapper">
         {% include("includes/logo.html.twig") %}
         <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
-            <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-primary-500">
-                Inscrivez-vous sur le site
-            </h1>
+            <h1>Inscrivez-vous sur le site</h1>
             {{ form_start(registrationForm, {'attr': {'class': 'form-wrapper'}}) }}
             <div>
                 {{ form_label(registrationForm.email, 'Votre email') }}
