:sparkles: aside + nav

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,9 +1,9 @@
-{% extends 'base.html.twig' %}
+{% extends 'base_form.html.twig' %}
 
 {% block title %}Connexion | {{ parent() }}{% endblock %}
 
 {% block body %}
-    <div class="wrapper">
+    <div class="wrapper-style wrapper-size">
         {% include("includes/logo.html.twig") %}
         <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
             <h1>Connexion à votre compte</h1>
