--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-
+    <div>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aspernatur deleniti distinctio dolorum earum ex exercitationem fuga, ipsum, minus, nemo non optio ullam ut voluptas voluptatum! Cum ea necessitatibus officiis!
+    </div>
 {% endblock body %}
