--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'base_form.html.twig' %}
 
 {% block title %}Inscription | {{ parent() }}{% endblock %}
 
@@ -7,7 +7,7 @@
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
 
-    <div class="wrapper">
+    <div class="wrapper-style wrapper-size">
         {% include("includes/logo.html.twig") %}
         <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
             <h1>Inscrivez-vous sur le site</h1>
