--- a/templates/includes/sidebar.html.twig
+++ b/templates/includes/sidebar.html.twig
@@ -8,7 +8,7 @@
             </a>
         </li>
         <li>
-            <a href="#" class="flex items-center item">
+            <a href="{{ path('app_profil') }}" class="flex items-center item">
                 <i data-feather="user" class="w-4"></i>
                 <span class="flex-1 ml-3 whitespace-nowrap">Profil</span>
             </a>
