--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -9,7 +9,7 @@
 
     <div class="wrapper-style wrapper-size">
         {% include("includes/logo.html.twig") %}
-        <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
+        <div class="space-y-4 md:space-y-6">
             <h1>Inscrivez-vous sur le site</h1>
             {{ form_start(registrationForm, {'attr': {'class': 'form-wrapper'}}) }}
             <div>
