--- a/assets/styles/components/_fonts.scss
+++ b/assets/styles/components/_fonts.scss
@@ -1,11 +1,23 @@
 /***************************/
+/********** THIN ***********/
+/***************************/
+@font-face {
+  font-family: 'Nunito Sans';
+  src:
+          url('../fonts/Poppins/Poppins-Thin.ttf') format('truetype'),
+          url('../fonts/Poppins/Poppins-ThinItalic.ttf') format('truetype');
+  font-weight: 200;
+  font-style: normal;
+}
+
+/***************************/
 /******* EXTRA-LIGHT *******/
 /***************************/
 @font-face {
   font-family: 'Nunito Sans';
   src:
-        url('../fonts/Nunito_Sans/NunitoSans-ExtraLight.ttf') format('truetype'),
-        url('../fonts/Nunito_Sans/NunitoSans-ExtraLightItalic.ttf') format('truetype');
+        url('../fonts/Poppins/Poppins-ExtraLight.ttf') format('truetype'),
+        url('../fonts/Poppins/Poppins-ExtraLightItalic.ttf') format('truetype');
   font-weight: 200;
   font-style: normal;
 }
@@ -16,8 +28,8 @@
 @font-face {
   font-family: 'Nunito Sans';
   src:
-          url('../fonts/Nunito_Sans/NunitoSans-Light.ttf') format('truetype'),
-          url('../fonts/Nunito_Sans/NunitoSans-LightItalic.ttf') format('truetype');
+          url('../fonts/Poppins/Poppins-Light.ttf') format('truetype'),
+          url('../fonts/Poppins/Poppins-LightItalic.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
 }
@@ -28,7 +40,7 @@
 @font-face {
   font-family: 'Nunito Sans';
   src:
-          url('../fonts/Nunito_Sans/NunitoSans-Regular.ttf') format('truetype');
+          url('../fonts/Poppins/Poppins-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
 }
@@ -39,8 +51,8 @@
 @font-face {
   font-family: 'Nunito Sans';
   src:
-          url('../fonts/Nunito_Sans/NunitoSans-SemiBold.ttf') format('truetype'),
-          url('../fonts/Nunito_Sans/NunitoSans-SemiBoldItalic.ttf') format('truetype');
+          url('../fonts/Poppins/Poppins-SemiBold.ttf') format('truetype'),
+          url('../fonts/Poppins/Poppins-SemiBoldItalic.ttf') format('truetype');
   font-weight: 600;
   font-style: normal;
 }
@@ -51,8 +63,8 @@
 @font-face {
   font-family: 'Nunito Sans';
   src:
-          url('../fonts/Nunito_Sans/NunitoSans-Bold.ttf') format('truetype'),
-          url('../fonts/Nunito_Sans/NunitoSans-BoldItalic.ttf') format('truetype');
+          url('../fonts/Poppins/Poppins-Bold.ttf') format('truetype'),
+          url('../fonts/Poppins/Poppins-BoldItalic.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
 }
@@ -63,8 +75,8 @@
 @font-face {
   font-family: 'Nunito Sans';
   src:
-          url('../fonts/Nunito_Sans/NunitoSans-ExtraBold.ttf') format('truetype'),
-          url('../fonts/Nunito_Sans/NunitoSans-ExtraBoldItalic.ttf') format('truetype');
+          url('../fonts/Poppins/Poppins-ExtraBold.ttf') format('truetype'),
+          url('../fonts/Poppins/Poppins-ExtraBoldItalic.ttf') format('truetype');
   font-weight: 800;
   font-style: normal;
 }
@@ -75,8 +87,8 @@
 @font-face {
   font-family: 'Nunito Sans';
   src:
-          url('../fonts/Nunito_Sans/NunitoSans-Black.ttf') format('truetype'),
-          url('../fonts/Nunito_Sans/NunitoSans-BlackItalic.ttf') format('truetype');
+          url('../fonts/Poppins/Poppins-Black.ttf') format('truetype'),
+          url('../fonts/Poppins/Poppins-BlackItalic.ttf') format('truetype');
   font-weight: 900;
   font-style: normal;
 }
