--- a/assets/styles/components/_form.scss
+++ b/assets/styles/components/_form.scss
@@ -7,7 +7,7 @@
 
   //Form Submit
   &-input {
-    @apply bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white;
+    @apply bg-gray-50 border border-gray-300 sm:text-sm rounded-lg block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400;
 
     &:focus {
       @apply ring-primary-600 border-primary-600 dark:ring-blue-500 dark:border-blue-500;
@@ -16,7 +16,7 @@
 
   //Form Submit
   &-submit {
-    @apply w-full text-white bg-primary-600 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600;
+    @apply w-full bg-primary-600 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600;
 
     &:focus {
       @apply ring-4 outline-none ring-primary-300 dark:ring-primary-800;
@@ -28,7 +28,7 @@
   }
 
   &-label {
-    @apply block mb-2 text-sm font-medium text-gray-900 dark:text-white block mb-2 text-sm font-medium text-gray-900 dark:text-white;
+    @apply block mb-2 text-sm font-medium block mb-2 text-sm font-medium;
   }
 
   &-checkbox {
