--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,7 +31,7 @@
 <body class="bg-cover bg-center bg-fixed flex">
     {% include('includes/darkmode.html.twig') %}
     {% include('includes/sidebar.html.twig') %}
-    <section class="flex-1 w-full p-8">
+    <section class="flex-1 w-full p-4 md:p-8 space-y-4 md:space-y-6">
         {% include('includes/navbar.html.twig') %}
         {% block body %}
 
