--- a/templates/includes/darkmode.html.twig
+++ b/templates/includes/darkmode.html.twig
@@ -1,4 +1,4 @@
-<section class="fixed right-4 bottom-4">
+<section class="fixed right-4 bottom-4 z-50">
     <label for="yellow-toggle" class="inline-flex relative items-center mr-5 cursor-pointer">
         <input type="checkbox" value="" id="darkmode-checkbox" class="sr-only peer">
         <div class="w-11 h-6 bg-gray-200 rounded-full peer dark:bg-gray-700 peer-focus:ring-4 peer-focus:ring-yellow-300 dark:peer-focus:ring-yellow-800 peer-checked:after:translate-x-full peer-checked:after:border-gray-800 after:content-[''] after:absolute after:top-0.5 after:left-[2px] after:bg-gray-800 after:border-gray-800 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-yellow-400"></div>
