--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <div class="wrapper-style wrapper-size">
         {% include("includes/logo.html.twig") %}
-        <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
+        <div class="space-y-4 md:space-y-6">
             <h1>Connexion à votre compte</h1>
             <form class="space-y-4 md:space-y-6" method="post">
                 {% if error %}
