--- a/assets/styles/components/_form.scss
+++ b/assets/styles/components/_form.scss
@@ -16,14 +16,14 @@
 
   //Form Submit
   &-submit {
-    @apply w-full bg-primary-600 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600;
+    @apply w-full text-white transition duration-300 bg-primary-600 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600;
 
     &:focus {
       @apply ring-4 outline-none ring-primary-300 dark:ring-primary-800;
     }
 
     &:hover {
-      @apply bg-primary-700 dark:bg-primary-700;
+      @apply transition duration-300 bg-primary-700 dark:bg-primary-700;
     }
   }
 
