fix phpstorm bug

--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -2,8 +2,8 @@
 
 {% block body %}
     <div class="wrapper-style">
-        {% for data in datas %}
-            <p>{{ data.name }}</p>
-        {% endfor %}
+{#        {% for data in datas %}#}
+{#            <p>{{ data.name }}</p>#}
+{#        {% endfor %}#}
     </div>
 {% endblock body %}
