--- a/assets/styles/components/_fonts.scss
+++ b/assets/styles/components/_fonts.scss
@@ -2,11 +2,11 @@
 /********** THIN ***********/
 /***************************/
 @font-face {
-  font-family: 'Nunito Sans';
+  font-family: 'Poppins';
   src:
           url('../fonts/Poppins/Poppins-Thin.ttf') format('truetype'),
           url('../fonts/Poppins/Poppins-ThinItalic.ttf') format('truetype');
-  font-weight: 200;
+  font-weight: 100;
   font-style: normal;
 }
 
@@ -14,7 +14,7 @@
 /******* EXTRA-LIGHT *******/
 /***************************/
 @font-face {
-  font-family: 'Nunito Sans';
+  font-family: 'Poppins';
   src:
         url('../fonts/Poppins/Poppins-ExtraLight.ttf') format('truetype'),
         url('../fonts/Poppins/Poppins-ExtraLightItalic.ttf') format('truetype');
@@ -26,7 +26,7 @@
 /********** LIGHT **********/
 /***************************/
 @font-face {
-  font-family: 'Nunito Sans';
+  font-family: 'Poppins';
   src:
           url('../fonts/Poppins/Poppins-Light.ttf') format('truetype'),
           url('../fonts/Poppins/Poppins-LightItalic.ttf') format('truetype');
@@ -38,7 +38,7 @@
 /********* REGULAR *********/
 /***************************/
 @font-face {
-  font-family: 'Nunito Sans';
+  font-family: 'Poppins';
   src:
           url('../fonts/Poppins/Poppins-Regular.ttf') format('truetype');
   font-weight: 400;
@@ -49,7 +49,7 @@
 /******** SEMI-BOLD ********/
 /***************************/
 @font-face {
-  font-family: 'Nunito Sans';
+  font-family: 'Poppins';
   src:
           url('../fonts/Poppins/Poppins-SemiBold.ttf') format('truetype'),
           url('../fonts/Poppins/Poppins-SemiBoldItalic.ttf') format('truetype');
@@ -61,7 +61,7 @@
 /************ BOLD *********/
 /***************************/
 @font-face {
-  font-family: 'Nunito Sans';
+  font-family: 'Poppins';
   src:
           url('../fonts/Poppins/Poppins-Bold.ttf') format('truetype'),
           url('../fonts/Poppins/Poppins-BoldItalic.ttf') format('truetype');
@@ -73,7 +73,7 @@
 /******** EXTRA-BOLD *******/
 /***************************/
 @font-face {
-  font-family: 'Nunito Sans';
+  font-family: 'Poppins';
   src:
           url('../fonts/Poppins/Poppins-ExtraBold.ttf') format('truetype'),
           url('../fonts/Poppins/Poppins-ExtraBoldItalic.ttf') format('truetype');
@@ -85,7 +85,7 @@
 /*********** BLACK *********/
 /***************************/
 @font-face {
-  font-family: 'Nunito Sans';
+  font-family: 'Poppins';
   src:
           url('../fonts/Poppins/Poppins-Black.ttf') format('truetype'),
           url('../fonts/Poppins/Poppins-BlackItalic.ttf') format('truetype');
