--- a/templates/monitor/_form.html.twig
+++ b/templates/monitor/_form.html.twig
@@ -1,4 +1,6 @@
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+{{ form_start(form, {'attr': {'class': 'grid md:grid-cols-2 lg:gap-6 gap-4'}}) }}
+    {{ form_widget(form.price) }}
+    {{ form_widget(form.resource) }}
+    {{ form_widget(form.stock) }}
+    <button class="form-submit">{{ button_label|default('Créer') }}</button>
 {{ form_end(form) }}
