:construction: average management

--- a/templates/base_form.html.twig
+++ b/templates/base_form.html.twig
@@ -30,7 +30,7 @@
 </head>
 <body class="bg-cover bg-center bg-fixed py-16 flex">
     {% include('includes/darkmode.html.twig') %}
-    <section class="flex flex-col items-center justify-center py-8 mx-auto md:h-screen flex-1">
+    <section class="flex flex-col items-center justify-center py-8 mx-auto md:h-screen">
         {% block body %}
         {% endblock %}
     </section>
