--- a/templates/api_to_database/index.html.twig
+++ b/templates/api_to_database/index.html.twig
@@ -1,20 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ApiToDatabaseController!{% endblock %}
+{% block title %}Misee à jour API | {{ parent() }}{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Users/matheozeller/Documents/monifus/src/Controller/ApiToDatabaseController.php'|file_link(0) }}">src/Controller/ApiToDatabaseController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Users/matheozeller/Documents/monifus/templates/api_to_database/index.html.twig'|file_link(0) }}">templates/api_to_database/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <h1>Mise à jour de l'API en bdd</h1>
 {% endblock %}
