--- a/templates/monitor/index.html.twig
+++ b/templates/monitor/index.html.twig
@@ -3,301 +3,38 @@
 {% block title %}Monitor | {{ parent() }}{% endblock %}
 
 {% block body %}
-    <section class="wrapper-style grid md:grid-cols-2 lg:grid-cols-3 gap-4 lg:gap-6">
-        <div class="col-start-1 col-end-4">
-            <h1>Monitor</h1>
-            <h2>Moyenne des ressources</h2>
-        </div>
+
+    {% for monitor in monitors %}
         <div class="wrapper-style">
             <div class="flex border-b-2 border-gray-300 dark:border-gray-700 pb-2">
                 <img class="h-8 mr-2" src="{{ asset('uploads/pepite.png') }}" alt="Image pépite">
-                <h3 class="text-2xl uppercase font-black">Pépites</h3>
+                <h3 class="text-2xl uppercase font-black">{{ monitor.name }}</h3>
             </div>
             <div class="pt-2">
                 <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">1</span> :</p>
+                    <p>Lot de <span class="text-primary-500 font-semibold"></span> :</p>
                     <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">2 450</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
+                        <span class="font-bold text-sm">2 450</span>
+                        <img class="ml-1 w-3 h-3" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
                     </div>
                 </div>
                 <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">10</span> :</p>
+                    <p>Lot de <span class="text-primary-500 font-semibold"></span> :</p>
                     <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">24 500</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
+                        <span class="font-bold text-sm">24 500</span>
+                        <img class="ml-1 w-3 h-3" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
                     </div>
                 </div>
                 <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">100</span> :</p>
+                    <p>Lot de <span class="text-primary-500 font-semibold"></span> :</p>
                     <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">245 000</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
+                        <span class="font-bold text-sm">245 000</span>
+                        <img class="ml-1 w-3 h-3" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
                     </div>
                 </div>
             </div>
         </div>
-        <div class="wrapper-style">
-            <div class="flex border-b-2 border-gray-300 dark:border-gray-700 pb-2">
-                <img class="h-8 mr-2" src="{{ asset('uploads/pepite.png') }}" alt="Image pépite">
-                <h3 class="text-2xl uppercase font-black">Pépites</h3>
-            </div>
-            <div class="pt-2">
-                <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">1</span> :</p>
-                    <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">2 450</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
-                    </div>
-                </div>
-                <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">10</span> :</p>
-                    <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">24 500</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
-                    </div>
-                </div>
-                <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">100</span> :</p>
-                    <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">245 000</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="wrapper-style">
-            <div class="flex border-b-2 border-gray-300 dark:border-gray-700 pb-2">
-                <img class="h-8 mr-2" src="{{ asset('uploads/pepite.png') }}" alt="Image pépite">
-                <h3 class="text-2xl uppercase font-black">Pépites</h3>
-            </div>
-            <div class="pt-2">
-                <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">1</span> :</p>
-                    <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">2 450</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
-                    </div>
-                </div>
-                <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">10</span> :</p>
-                    <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">24 500</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
-                    </div>
-                </div>
-                <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">100</span> :</p>
-                    <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">245 000</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="wrapper-style">
-            <div class="flex border-b-2 border-gray-300 dark:border-gray-700 pb-2">
-                <img class="h-8 mr-2" src="{{ asset('uploads/pepite.png') }}" alt="Image pépite">
-                <h3 class="text-2xl uppercase font-black">Pépites</h3>
-            </div>
-            <div class="pt-2">
-                <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">1</span> :</p>
-                    <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">2 450</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
-                    </div>
-                </div>
-                <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">10</span> :</p>
-                    <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">24 500</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
-                    </div>
-                </div>
-                <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">100</span> :</p>
-                    <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">245 000</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="wrapper-style">
-            <div class="flex border-b-2 border-gray-300 dark:border-gray-700 pb-2">
-                <img class="h-8 mr-2" src="{{ asset('uploads/pepite.png') }}" alt="Image pépite">
-                <h3 class="text-2xl uppercase font-black">Pépites</h3>
-            </div>
-            <div class="pt-2">
-                <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">1</span> :</p>
-                    <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">2 450</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
-                    </div>
-                </div>
-                <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">10</span> :</p>
-                    <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">24 500</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
-                    </div>
-                </div>
-                <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">100</span> :</p>
-                    <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">245 000</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="wrapper-style">
-            <div class="flex border-b-2 border-gray-300 dark:border-gray-700 pb-2">
-                <img class="h-8 mr-2" src="{{ asset('uploads/pepite.png') }}" alt="Image pépite">
-                <h3 class="text-2xl uppercase font-black">Pépites</h3>
-            </div>
-            <div class="pt-2">
-                <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">1</span> :</p>
-                    <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">2 450</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
-                    </div>
-                </div>
-                <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">10</span> :</p>
-                    <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">24 500</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
-                    </div>
-                </div>
-                <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">100</span> :</p>
-                    <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">245 000</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="wrapper-style">
-            <div class="flex border-b-2 border-gray-300 dark:border-gray-700 pb-2">
-                <img class="h-8 mr-2" src="{{ asset('uploads/pepite.png') }}" alt="Image pépite">
-                <h3 class="text-2xl uppercase font-black">Pépites</h3>
-            </div>
-            <div class="pt-2">
-                <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">1</span> :</p>
-                    <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">2 450</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
-                    </div>
-                </div>
-                <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">10</span> :</p>
-                    <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">24 500</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
-                    </div>
-                </div>
-                <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">100</span> :</p>
-                    <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">245 000</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="wrapper-style">
-            <div class="flex border-b-2 border-gray-300 dark:border-gray-700 pb-2">
-                <img class="h-8 mr-2" src="{{ asset('uploads/pepite.png') }}" alt="Image pépite">
-                <h3 class="text-2xl uppercase font-black">Pépites</h3>
-            </div>
-            <div class="pt-2">
-                <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">1</span> :</p>
-                    <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">2 450</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
-                    </div>
-                </div>
-                <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">10</span> :</p>
-                    <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">24 500</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
-                    </div>
-                </div>
-                <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">100</span> :</p>
-                    <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">245 000</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="wrapper-style">
-            <div class="flex border-b-2 border-gray-300 dark:border-gray-700 pb-2">
-                <img class="h-8 mr-2" src="{{ asset('uploads/pepite.png') }}" alt="Image pépite">
-                <h3 class="text-2xl uppercase font-black">Pépites</h3>
-            </div>
-            <div class="pt-2">
-                <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">1</span> :</p>
-                    <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">2 450</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
-                    </div>
-                </div>
-                <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">10</span> :</p>
-                    <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">24 500</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
-                    </div>
-                </div>
-                <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">100</span> :</p>
-                    <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">245 000</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="wrapper-style">
-            <div class="flex border-b-2 border-gray-300 dark:border-gray-700 pb-2">
-                <img class="h-8 mr-2" src="{{ asset('uploads/pepite.png') }}" alt="Image pépite">
-                <h3 class="text-2xl uppercase font-black">Pépites</h3>
-            </div>
-            <div class="pt-2">
-                <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">1</span> :</p>
-                    <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">2 450</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
-                    </div>
-                </div>
-                <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">10</span> :</p>
-                    <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">24 500</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
-                    </div>
-                </div>
-                <div class="flex items-center">
-                    <p>Lot de <span class="text-primary-500 font-semibold">100</span> :</p>
-                    <div class="flex items-center pl-2">
-                        <span class="font-bold text-lg">245 000</span>
-                        <img class="ml-1 w-4 h-4" src="{{ asset('uploads/kamas.webp') }}" alt="Image kamas">
-                    </div>
-                </div>
-            </div>
-        </div>
+    {% endfor %}
         <a class="col-start-1 form-submit" href="{{ path('app_monitor_new') }}">Créer un moniteur</a>
     </section>
 
