:sparkles: Add database API function

--- a/templates/includes/sidebar.html.twig
+++ b/templates/includes/sidebar.html.twig
@@ -23,7 +23,7 @@
         {% endif %}
         {% if is_granted('ROLE_SUPER_ADMIN') %}
             <li>
-                <a href="{{ path('app_api_to_database') }}" class="flex items-center item">
+                <a href="#" class="flex items-center item">
                     <i data-feather="database" class="w-4"></i>
                     <span class="flex-1 ml-3 whitespace-nowrap">DATABASE Refresh</span>
                 </a>
