:sparkles: Monitor setup

--- a/templates/includes/sidebar.html.twig
+++ b/templates/includes/sidebar.html.twig
@@ -13,19 +13,17 @@
                 <span class="flex-1 ml-3 whitespace-nowrap">Profil</span>
             </a>
         </li>
+        <li>
+            <a href="{{ path('app_resource') }}" class="flex items-center item">
+                <i data-feather="database" class="w-4"></i>
+                <span class="flex-1 ml-3 whitespace-nowrap">Ressources</span>
+            </a>
+        </li>
         {% if is_granted('ROLE_TRUST') %}
             <li>
                 <a href="{{ path('app_monitor_index') }}" class="flex items-center item">
                     <i data-feather="bar-chart-2" class="w-4"></i>
-                    <span class="flex-1 ml-3 whitespace-nowrap">Monitor</span>
-                </a>
-            </li>
-        {% endif %}
-        {% if is_granted('ROLE_SUPER_ADMIN') %}
-            <li>
-                <a href="#" class="flex items-center item">
-                    <i data-feather="database" class="w-4"></i>
-                    <span class="flex-1 ml-3 whitespace-nowrap">DATABASE Refresh</span>
+                    <span class="flex-1 ml-3 whitespace-nowrap">Moniteurs</span>
                 </a>
             </li>
         {% endif %}
