--- a/templates/monitor/_form.html.twig
+++ b/templates/monitor/_form.html.twig
@@ -1,6 +1,7 @@
 {{ form_start(form, {'attr': {'class': 'grid md:grid-cols-2 lg:gap-6 gap-4'}}) }}
-    {{ form_widget(form.price) }}
     {{ form_widget(form.resource) }}
-    {{ form_widget(form.stock) }}
+    {{ form_widget(form.pricePer1) }}
+    {{ form_widget(form.pricePer10) }}
+    {{ form_widget(form.pricePer100) }}
     <button class="form-submit">{{ button_label|default('Créer') }}</button>
 {{ form_end(form) }}
